yoshimi 1.5.2 M

2017-6-23 Will
* Added delay to CLI return so most ops complete first.
* Small improvement to Crossfade smoothness.
* Removed redundant & commented out code in PartUI.fl.
* Improved range checks in Part.cpp.
  Also removed redundant kit range checks.
* Fixed key range regression caused by last commit :(

2017-6-22 Will
* Fixed regression kitmode effect select works again.
  Also improved numbering.

2017-6-21 Will
* Revised CLI help menu for greater clarity.
* Implemented CLI list tuning and keymap.

2017-6-19 Will
* CLI can now write or load tunings and keymaps.

2017-6-18 Will
* Tuning error reporting completed.
* Keymap error reporting completed.
* Updated docs.
* Scales code cleanups and optimisations.

2017-6-16 Will
* Added loopback for low priority functions into 'returns'.
* Direct access writing now possible for all scale data.
* Improved scales error reporting.
  More to do.
* Updated docs.

2017-6-12 Will
* Further refinements to scales accuracy
  (no longer needing doubles)
* Full XML float compatibility with ZynAddSubFX.

2017-6-11 Will
* Improved scales compatibility with old files/ versions.

2017-6-9 Will
* BugFix: miscMsgPop wasn't checking index range.
* Loading patch sets always zeros 'Solo' channel number.

2017-6-8 Will
* BugFix Loading scales wasn't updating name/comment.
* Direct access - more scales controls available.
* Direct access scale loading in place.

2017-6-7 Will
* Scales no longer suffer from cumulative errors :)
* Removed some (now unnecessary) mutex locks.
* Direct access tunings and keymaps now CSV,
  and reformatted to standard scales.

2017-6-5 Will
* Improved accuracy of scale number<=>text conversions.
* Added "Musical Scale.odf" to 'doc'.

2017-6-4 Will
* Tunings and Keyboard map implemented.
* Most Scales controls now available to direct access.
* Added new Scales.txt doc to 'dev_notes'
* Updated Yoshimi Control Numbers.ods file.

2017-6-3 Will
* Made Invert center key status clearer.