@@ -10,6 +10,29 @@ Y : 14 to 119 : 49 : 240 : 255 : 255 : 255 : 255 : 255 : Channel Switcher Incomi
 Y : any : 96 : 240 : 255 : 255 : 255 : 255 : 255 : Reset (clear all)
 Y : any : 128 : 240 : 255 : 255 : 255 : 255 : 255 : Stop
 
+Scales (microtonal)
+Y : 1.0 to 20000.0 : 0 : 232 : 255 : 255 : 255 : 255 : 255 : 'A’ frequency
+Y : 0 to 127 : 1 : 232 : 255 : 255 : 255 : 255 : 255 : 'A’ note
+Y : 0 / 1 : 2 : 232 : 255 : 255 : 255 : 255 : 255 : Invert keys
+Y : 0 to 127 : 3 : 232 : 255 : 255 : 255 : 255 : 255 : Key centre
+Y : -63 to 64 : 4 : 232 : 255 : 255 : 255 : 255 : 255 : Scale shift
+Y : 0 / 1 : 8 : 232 : 255 : 255 : 255 : 255 : 255 : Enable Microtonal
+
+Y : 0 / 1 : 16 : 232 : 255 : 255 : 255 : 255 : 255 : Enable keyboard mapping
+Y : 0 to 127 : 17 : 232 : 255 : 255 : 255 : 255 : 255 : Keyboard first note
+Y : 0 to 127 : 18 : 232 : 255 : 255 : 255 : 255 : 255 : Keyboard middle note
+Y : 0 to 127 : 19 : 232 : 255 : 255 : 255 : 255 : 255 : keyboard last note
+
+Y : return size/err : 32 : 232 : 255 : 255 : 255 : 128 : msg No. : Tunings
+Y : return size/err : 33 : 232 : 255 : 255 : 255 : 128 : msg No. : Keyboard map
+Y : return size/err : 48 : 232 : 255 : 255 : 255 : 255 : msg No. : Import .scl file
+Y : return size/err : 49 : 232 : 255 : 255 : 255 : 255 : msg No. : Import .kbm file
+
+Y : any : 64 : 232 : 255 : 255 : 255 : 128 : msg No. : Set name
+Y : any : 65 : 232 : 255 : 255 : 255 : 128 : msg No. : Set comment
+
+Y : any : 96 : 232 : 255 : 255 : 255 : 255 : : Clear all settings
+
 Vector control window
  :  :  : Base Channel
 n : 0 to 15 : 0 : 192 + (0 to 15) : 255 : 255 : 255 : 255 : 255 : Was Base channel Now does nothing
